--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
   </head>
   <body>
-    <<h1>This is header</h1>>
+    <h1>This is header</h1>
+    <p>This is my first paragraph</p>
   </body>
 </html>
