--- a/Git-Test/index.html
+++ b/Git-Test/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Required meta tags always come first -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title></title>
   </head>
   <body>
@@ -8,5 +15,9 @@
     <p>This is my first paragraph</p>
     <p>This is my second paragraph</p>
     <p>this is third paragraph</p>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
